--- a/gestion-mercado/src/app/components/header/header.html
+++ b/gestion-mercado/src/app/components/header/header.html
@@ -24,14 +24,9 @@
           </div>
           <hr>
           <div class="opciones-menu">
-            <div class="opcion">
+            <div class="opcion" routerLink="/menu">
               <span class="material-symbols-outlined">home</span>
-              <p>Inicio</p>
-              <span>></span>
-            </div>
-            <div class="opcion">
-              <span class="material-symbols-outlined">person_pin</span>
-              <p>Ver perfil</p>
+              <p>Menú</p>
               <span>></span>
             </div>
 
