--- a/gestion-mercado/src/app/pages/tienda-pages/tienda-page/tienda-page.html
+++ b/gestion-mercado/src/app/pages/tienda-pages/tienda-page/tienda-page.html
@@ -1,4 +1,5 @@
-<div class="tienda-page-layout">
+
+<main class="tienda-page-layout">
     <div class="tienda-list-panel">
         <app-tiendas-list></app-tiendas-list>
     </div>
@@ -9,4 +10,4 @@
           <app-tiendas-form></app-tiendas-form>
       </div>
     }
-</div>
+</main>
