--- a/gestion-mercado/src/app/components/header/header.html
+++ b/gestion-mercado/src/app/components/header/header.html
@@ -5,21 +5,21 @@
   <nav class="container">
     <div class="header-izq">
       <a href="/menu">
-        <img src="https://i.pinimg.com/736x/97/b1/70/97b170d2f8f2dea37c4c465c8c9ceb14.jpg" alt="logo" class = "logo">
+        <img src="https://i.pinimg.com/736x/97/b1/70/97b170d2f8f2dea37c4c465c8c9ceb14.jpg" alt="logo" class="logo">
         <h1 class="titulo"> Mercado del Cerezo </h1>
       </a>
     </div>
 
     <div class="header-der">
       <img src="https://i.pinimg.com/736x/1f/9a/91/1f9a91d7e4bce09f89e82c89e9d40e8c.jpg" alt=""
-          class = "user-icon icono-perfil-principal"
-          (click)="toggleMenu()">
+        class="user-icon icono-perfil-principal" (click)="toggleMenu()">
+      <span class="material-symbols-outlined flecha-menu" [class.girar]="menuAbierto"
+        (click)="toggleMenu()">expand_more</span>
 
-      <div class = "menu-desplegable"
-          [ngClass]="{'abrir-menu': menuAbierto}">
-        <div class = "contenedor-menu">
-          <div class = "user-info">
-            <img src="https://i.pinimg.com/736x/1f/9a/91/1f9a91d7e4bce09f89e82c89e9d40e8c.jpg" alt="" class = "user-icon">
+      <div class="menu-desplegable" [ngClass]="{'abrir-menu': menuAbierto}">
+        <div class="contenedor-menu">
+          <div class="user-info">
+            <img src="https://i.pinimg.com/736x/1f/9a/91/1f9a91d7e4bce09f89e82c89e9d40e8c.jpg" alt="" class="user-icon">
             <h2>{{ authService.getPersonaName() || authService.getRole() }}</h2>
           </div>
           <hr>
