--- a/gestion-mercado/src/app/components/detalles-pedido/detalles-pedido.css
+++ b/gestion-mercado/src/app/components/detalles-pedido/detalles-pedido.css
@@ -66,8 +66,9 @@ section.detalles .campo select:focus {
   box-shadow: 0 0 0 3px rgba(255, 166, 201, 0.2);
 }
 
-/* Botón Agregar Detalle → igual al botón SUBMIT del form principal */
+
 section.detalles button.agregar-detalle {
+  margin-top: 0;
   padding: 1rem 2.5rem;
   border-radius: 12px;
   border: none;
@@ -129,7 +130,23 @@ section.detalles tbody td {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-/* Botón eliminar (igual al form principal) */
+section.detalles .btnEditar {
+  padding: 0.7rem 1.5rem;
+  background: rgba(120, 179, 255, 0.4);
+  border: 2px solid rgba(120, 190, 255, 0.6);
+  border-radius: 10px;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+section.detalles .btnEditar:hover {
+  background: rgba(100, 141, 255, 0.7);
+  border-color: rgba(83, 80, 255, 0.7);
+  transform: translateY(-2px);
+}
+
 section.detalles .btnEliminar {
   padding: 0.7rem 1.5rem;
   background: rgba(255, 120, 120, 0.4);
@@ -181,4 +198,24 @@ h3{
   padding: 0.5rem 1.5rem;
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.4);
+}
+
+section.detalles .tablaBody tr {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+section.detalles tbody td {
+  border-bottom: none;
+}
+
+section.detalles .tablaBody td.botones {
+  justify-content: center;
+  align-items: center;
+}
+
+.acciones-form {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  margin-top: 1rem;
 }
