--- a/gestion-mercado/src/app/pages/cliente-pages/cliente-list/cliente-list.html
+++ b/gestion-mercado/src/app/pages/cliente-pages/cliente-list/cliente-list.html
@@ -1,13 +1,21 @@
 <section class="list-container">
   <div class="botones">
     <button type="button" class="btn-agregar" routerLink="/menu/clientes/form">Agregar</button>
+
     <select (change)="atributo.set($any($event.target).value)">
+      <option value="personaId" selected>ID</option>
+      <option value="clienteId">ID Cliente</option>
       <option value="nombre">Nombre</option>
       <option value="dni">Dni</option>
       <option value="edad">Edad</option>
     </select>
 
-    <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
+    <select (change)="orden.set($any($event.target).value)">
+      <option value="asc">Ascendente</option>
+      <option value="desc">Descendente</option>
+    </select>
+
+    <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)"/>
   </div>
 
   <table class="tabla">
