--- a/gestion-mercado/src/app/pages/pedido-pages/pedidos-list/pedidos-list.html
+++ b/gestion-mercado/src/app/pages/pedido-pages/pedidos-list/pedidos-list.html
@@ -1,13 +1,29 @@
 <div class="list-container">
 
-  <select (change)="onTipoChange($event)">
-  <option value="">Todos</option>
-  <option value="VENTA">Venta</option>
-  <option value="COMPRA">Compra</option>
-</select>
 
   <div class="botones">
     <button type="button" class="btn-agregar" routerLink="/menu/pedidos/form"> Registrar PEDIDO </button>
+
+    <select (change)="onTipoChange($event)">
+      <option value="">Todos</option>
+      <option value="VENTA">Venta</option>
+      <option value="COMPRA">Compra</option>
+    </select>
+
+    <select (change)="orden.set($any($event.target).value)">
+      <option value="asc">Ascendente</option>
+      <option value="desc">Descendente</option>
+    </select>
+
+    <select (change)="atributo.set($any($event.target).value)">
+      <option value="pedidoId">Pedido ID</option>
+      <option value="transaccionId">Transacción ID</option>
+      <option value="tipo">Tipo</option>
+      <option value="fecha">Fecha</option>
+      <option value="total">Total</option>
+    </select>
+
+    <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)"/>
   </div>
 
   <table class="tabla">
