--- a/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
+++ b/gestion-mercado/src/app/pages/product-pages/product-list/product-list.html
@@ -3,13 +3,14 @@
 
   <div class="filter-search-container">
     <select (change)="atributo.set($any($event.target).value)">
+      <option value="producto_id" selected>Producto ID</option>
       <option value="nombre">Nombre</option>
       <option value="categoria">Categoría</option>
     </select>
 
     <select (change)="orden.set($any($event.target).value)">
-      <option value="asc">A - Z</option>
-      <option value="desc">Z - A</option>
+      <option value="asc">Asc</option>
+      <option value="desc">Desc</option>
     </select>
 
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)">
