--- a/gestion-mercado/src/app/pages/proveedor-pages/proveedores-list/proveedores-list.html
+++ b/gestion-mercado/src/app/pages/proveedor-pages/proveedores-list/proveedores-list.html
@@ -1,15 +1,18 @@
 <section class="list-container">
   <div class="botones">
     <button type="button" class="btn-agregar" routerLink="/menu/proveedores/form">Agregar</button>
+
     <select (change)="atributo.set($any($event.target).value)">
+      <option value="personaId" selected>Persona ID</option>
+      <option value="proveedorId">Proveedor ID</option>
       <option value="nombre">Nombre</option>
-      <option value="dni">Dni</option>
+      <option value="dni">DNI</option>
       <option value="edad">Edad</option>
     </select>
 
     <select (change)="orden.set($any($event.target).value)">
-      <option value="asc">A - Z</option>
-      <option value="desc">Z - A</option>
+      <option value="asc">Ascendente</option>
+      <option value="desc">Descendente</option>
     </select>
 
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
