--- a/gestion-mercado/src/app/pages/usuarios-pages/usuarios-list/usuarios-list.html
+++ b/gestion-mercado/src/app/pages/usuarios-pages/usuarios-list/usuarios-list.html
@@ -3,17 +3,17 @@
     <button type="button" class="btn-agregar" routerLink="/menu/usuarios/form">Agregar</button>
 
     <select (change)="atributo.set($any($event.target).value)">
+      <option value="usuarioId">ID</option>
       <option value="email">Email</option>
     </select>
 
     <select (change)="orden.set($any($event.target).value)">
-      <option value="asc">A - Z</option>
-      <option value="desc">Z - A</option>
+      <option value="asc">Ascendente</option>
+      <option value="desc">Descendente</option>
     </select>
 
     <input type="text" placeholder="Buscar..." (input)="filtro.set($any($event.target).value)" />
   </div>
-
 
   <table class="tabla">
     <thead class="encabezado">
