--- a/gestion-mercado/src/app/pages/duenios-pages/duenio-form/duenio-form.html
+++ b/gestion-mercado/src/app/pages/duenios-pages/duenio-form/duenio-form.html
@@ -32,13 +32,28 @@
           <span class = "error">El email del Dueño es requerido en formato correcto.</span>
         }
     </div>
-    <div class = "campo">
-      <label> Contraseña: </label>
-        <input type="password" formControlName="contraseña">
-        @if (form.get('contraseña')?.invalid && form.get('contraseña')?.touched) {
-          <span class = "error">La contraseña del Dueño es requerida.</span>
-        }
-      </div>
+   <div class = "campo">
+  <label> Contraseña: </label>
+
+  <div class="password-input-wrapper">
+    <input
+      [type]="passwordVisible ? 'text' : 'password'"
+      formControlName="contraseña"
+    >
+
+    <button
+      type="button"
+      class="toggle-password"
+      (click)="togglePasswordVisibility()"
+    >
+      {{ passwordVisible ? 'Ocultar' : 'Mostrar' }}
+    </button>
+  </div>
+
+  @if (form.get('contraseña')?.invalid && form.get('contraseña')?.touched) {
+    <span class = "error">La contraseña del Dueño es requerida.</span>
+  }
+</div>
 
     <div class="botones">
       <button type="submit"[disabled]="form.invalid">
