--- a/gestion-mercado/src/app/pages/usuarios-pages/usuario-form/usuario-form.html
+++ b/gestion-mercado/src/app/pages/usuarios-pages/usuario-form/usuario-form.html
@@ -11,12 +11,27 @@
         }
     </div>
     <div class="campo">
-      <label>Contraseña: </label>
-        <input type="password" formControlName="contraseña">
-        @if (form.get('contraseña')?.invalid && form.get('contraseña')?.touched) {
-          <span class = "error">La contraseña es requerida.</span>
-        }
-    </div>
+  <label>Contraseña: </label>
+
+  <div class="password-input-wrapper">
+    <input
+      [type]="passwordVisible ? 'text' : 'password'"
+      formControlName="contraseña"
+    >
+
+    <button
+      type="button"
+      class="toggle-password"
+      (click)="togglePasswordVisibility()"
+    >
+      {{ passwordVisible ? 'Ocultar' : 'Mostrar' }}
+    </button>
+  </div>
+
+  @if (form.get('contraseña')?.invalid && form.get('contraseña')?.touched) {
+    <span class = "error">La contraseña es requerida.</span>
+  }
+</div>
 
     <div class="botones">
       <button type="submit"[disabled]="form.invalid">
