--- a/gestion-mercado/src/app/pages/usuarios-pages/usuario-form/usuario-form.css
+++ b/gestion-mercado/src/app/pages/usuarios-pages/usuario-form/usuario-form.css
@@ -29,7 +29,7 @@
 
 .password-input-wrapper input {
   width: 100%;
-  padding-right: 3.5rem; /* espacio para el botón "Mostrar/Ocultar" */
+  padding-right: 3.5rem; 
 }
 
 .toggle-password {
@@ -43,7 +43,7 @@
   font-size: 0.8rem;
   font-weight: 600;
   padding: 0;
-  /* si querés que combine con la paleta del login: */
+
   color: var(--color2);
 }
 
