--- a/gestion-mercado/src/styles.css
+++ b/gestion-mercado/src/styles.css
@@ -80,6 +80,21 @@ form {
   margin-left: 2rem;
 }
 
+/*para que si los forms son inválidos no se rompa y se agregue margen o algo D:*/
+form.ng-untouched,
+form.ng-pristine,
+form.ng-invalid,
+input.ng-untouched,
+input.ng-pristine,
+input.ng-invalid,
+textarea.ng-untouched,
+textarea.ng-pristine,
+textarea.ng-invalid {
+    margin: 0 !important;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .campo {
   display: flex;
   flex-direction: column;
