--- a/gestion-mercado/src/app/pages/empleado-pages/empleado-form/empleado-form.html
+++ b/gestion-mercado/src/app/pages/empleado-pages/empleado-form/empleado-form.html
@@ -21,7 +21,7 @@
         <label>Edad: </label>
         <input type="number" formControlName="edad">
         @if (form.get('edad')?.invalid && form.get('edad')?.touched) {
-          <span class = "error">El cliente debe tener entre 18 y 120 años.</span>
+          <span class = "error">El empleado debe tener entre 18 y 120 años.</span>
         }
       </div>
       <div class = "campo">
