--- a/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-form/cuentas-bancarias-form.html
+++ b/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-form/cuentas-bancarias-form.html
@@ -1,28 +1,32 @@
-<h2> {{ isEditMode() ? 'Editar Cuenta Bancaria' : 'Registrar Cuenta Bancaria' }} </h2>
+<div class="form-container">
+  <div class="card">
+    <h2> {{ isEditMode() ? 'Editar Cuenta Bancaria' : 'Registrar Cuenta Bancaria' }} </h2>
 
-<form [formGroup]="form" (ngSubmit)="saveCuentaBancaria()">
-  <div class = "campo">
-    <label>CBU: </label>
-    <input type ="number" formControlName="cbu">
-    @if (form.get('cbu')?.invalid && form.get('cbu')?.touched) {
-      <span class = "error">El CBU de la cuenta bancaria es requerido.</span>
-    }
-  </div>
-  <div class = "campo">
-    <label>Saldo: </label>
-    <input type="number" formControlName="saldo">
-    @if (form.get('saldo')?.invalid && form.get('saldo')?.touched) {
-      <span class = "error">El saldo de la cuenta bancaria es requerido.</span>
-    }
-  </div>
+    <form [formGroup]="form" (ngSubmit)="saveCuentaBancaria()">
+      <div class = "campo">
+        <label>CBU: </label>
+        <input type ="number" formControlName="cbu">
+        @if (form.get('cbu')?.invalid && form.get('cbu')?.touched) {
+          <span class = "error">El CBU de la cuenta bancaria es requerido.</span>
+        }
+      </div>
+      <div class = "campo">
+        <label>Saldo: </label>
+        <input type="number" formControlName="saldo">
+        @if (form.get('saldo')?.invalid && form.get('saldo')?.touched) {
+          <span class = "error">El saldo de la cuenta bancaria es requerido.</span>
+        }
+      </div>
 
-  <div class = "botones">
-    <button type="submit" [disabled]="form.invalid">
-        {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
-      </button>
+      <div class = "botones">
+        <button type="submit" [disabled]="form.invalid">
+            {{ isEditMode() ? 'Actualizar' : 'Registrar' }}
+          </button>
 
-      @if (isEditMode()){
-        <button type="button" (click)="cancelarUpdate()">Cancelar</button>
-      }
+          @if (isEditMode()){
+            <button type="button" (click)="cancelarUpdate()">Cancelar</button>
+          }
+      </div>
+    </form>
   </div>
-</form>
+</div>
