--- a/gestion-mercado/src/app/components/detalles-pedido/detalles-pedido.html
+++ b/gestion-mercado/src/app/components/detalles-pedido/detalles-pedido.html
@@ -1,6 +1,6 @@
 <section class="detalles">
 
-  @if (pedido.estado === 'FINALIZADO') {
+  @if (pedido.estado === 'PENDIENTE') {
     <form>
 
     <div class="campo">
