--- a/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-form/cuentas-bancarias-form.html
+++ b/gestion-mercado/src/app/pages/cuentaBancaria-pages/cuentas-bancarias-form/cuentas-bancarias-form.html
@@ -29,4 +29,7 @@
       </div>
     </form>
   </div>
+  <div class="image">
+    <img src="assets/images/cuentas-bancarias.png" alt="">
+  </div>
 </div>
