--- a/gestion-mercado/src/app/pages/lote-pages/lotes-form/lotes-form.html
+++ b/gestion-mercado/src/app/pages/lote-pages/lotes-form/lotes-form.html
@@ -55,4 +55,7 @@
       </div>
     </form>
   </div>
+  <div class="image">
+    <img src="assets/images/lote-cofre.png" alt="COFRE DE MINECRAFT">
+  </div>
 </div>
