--- a/gestion-mercado/src/app/pages/cliente-pages/cliente-form/cliente-form.css
+++ b/gestion-mercado/src/app/pages/cliente-pages/cliente-form/cliente-form.css
@@ -7,13 +7,12 @@
 .image {
   display: flex;
   position: relative;
-  align-items: flex-end;
-  justify-content: flex-end;
-  width: 100%;
+  align-items: center;
+  justify-content: center;
+  width: 40rem;
 }
 
 .image img {
-  width: 80rem;
   max-width: 100%;
 }
 
