--- a/gestion-mercado/src/app/pages/cliente-pages/cliente-form/cliente-form.html
+++ b/gestion-mercado/src/app/pages/cliente-pages/cliente-form/cliente-form.html
@@ -37,6 +37,6 @@
     </form>
   </div>
   <div class="image">
-    <img src="assets/images/arbol-sakura.png" alt="Personaje">
+    <img src="assets/images/cliente-nobara.png" alt="NOBARA">
   </div>
 </div>
