--- a/gestion-mercado/src/app/pages/duenios-pages/duenio-form/duenio-form.html
+++ b/gestion-mercado/src/app/pages/duenios-pages/duenio-form/duenio-form.html
@@ -68,6 +68,6 @@
     </form>
   </div>
   <div class="image">
-    <img src="assets/images/arbol-sakura.png" alt="Personaje">
+    <img src="assets/images/dueno.png" alt="Personaje">
   </div>
 </div>
