--- a/gestion-mercado/src/app/pages/tienda-pages/tienda-page/tienda-page.css
+++ b/gestion-mercado/src/app/pages/tienda-pages/tienda-page/tienda-page.css
@@ -5,4 +5,21 @@
   gap: 3rem;
   padding: 3rem;
   background: var(--color6);
+  background-image: url('/assets/images/tienda-imagen.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  image-rendering: auto;
+}
+
+.tienda-page-layout::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(14, 2, 12, 0.849);
+  z-index: 0;
 }
