--- a/gestion-mercado/src/app/pages/tienda-pages/tiendas-list/tiendas-list.css
+++ b/gestion-mercado/src/app/pages/tienda-pages/tiendas-list/tiendas-list.css
@@ -1,6 +1,5 @@
 /* Contenedor principal */
 .tienda-container {
-  padding-left: 5%;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   flex-direction: column;
@@ -61,19 +60,20 @@ ul li {
   border-radius: 24px;
   padding: 5rem;
   width: 100%;
-  max-width: 40dvw;
+  max-width: 50dvw;
   box-shadow:
     0 8px 32px rgba(255, 182, 193, 0.15),
     0 0 0 1px rgba(255, 255, 255, 0.1) inset;
   border: 1px solid rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(20px);
 }
 
 p {
   color: #fff;
   text-align: center;
   margin-bottom: 5rem;
-  font-size: 3rem;
-  letter-spacing: 1px;
+  font-size: 2.5rem;
+  letter-spacing: 2px;
 }
 
 ul li::before {
@@ -100,13 +100,13 @@ ul li::before {
   padding: 0.8rem 1.2rem;
   border: none;
   border-radius: 12px;
-  font-size: 0.95rem;
-  font-weight: 700;
+  font-size: 1rem;
+  font-weight: 1000;
   cursor: pointer;
   transition: all 0.25s ease;
   text-transform: uppercase;
   letter-spacing: 1px;
-  color: white;
+  color: var(--color5);
 }
 
 .actions button.edit {
