--- a/gestion-mercado/src/app/styles/form-style.scss
+++ b/gestion-mercado/src/app/styles/form-style.scss
@@ -1,4 +1,3 @@
-
 .form-container {
   min-height: 85vh;
   display: flex;
@@ -6,7 +5,6 @@
   justify-content: center;
   width: 100%;
   gap: 3rem;
-  padding-left: 5%;
   position: relative;
   background: linear-gradient(135deg, #2c1b2e 0%, #1a0e1f 50%, #2c1b2e 100%);
 
@@ -30,6 +28,7 @@
   backdrop-filter: blur(20px);
   border-radius: 24px;
   padding: 3rem;
+  margin: 3rem 0;
   width: 100%;
   max-width: 600px;
   box-shadow:
