--- a/gestion-mercado/src/app/styles/tabla-style.scss
+++ b/gestion-mercado/src/app/styles/tabla-style.scss
@@ -1,7 +1,7 @@
 
 .list-container {
   padding: 2rem;
-  background-color: #fcf1f1;
+  background: linear-gradient(180deg, #fff5f9 0%, #ffb7d5 100%);
   min-height: 100vh;
 }
 
@@ -98,10 +98,16 @@ input[type="text"]:focus {
   width: 100%;
   border-collapse: separate;
   border-spacing: 0;
-  background-color: white;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(255, 182, 193, 0.15);
+  background-image:
+    linear-gradient(rgba(255, 249, 252, 0.959), rgba(245, 236, 242, 0.952)),
+    url('/assets/images/background-tabla-gemerius.jpg');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-color: var(--color6);
 }
 
 .encabezado {
@@ -131,7 +137,7 @@ input[type="text"]:focus {
 .tablaBody td {
   padding: 1rem 1.25rem;
   font-size: 1.5rem;
-  color: #8b5a6f;
+  color: var(--color3);
 }
 
 /* Celda de acciones con ancho fijo más amplio */
